# godo

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  TODO.md
.claude/: settings.local.json
crates/godo/: Cargo.toml
crates/godo-term/: Cargo.toml
crates/godo-term/examples/: demo.rs
crates/godo-term/src/: lib.rs  output.rs
crates/godo/src/: args.rs  main.rs  ui.rs  utils.rs
crates/godo/src/commands/: clean.rs  diff.rs  list.rs  mod.rs  remove.rs  run.rs
crates/godo/tests/: connections.rs  integration_test.rs
crates/godo/tests/common/: mod.rs
crates/libgodo/: Cargo.toml
crates/libgodo/examples/: demo.rs
crates/libgodo/src/: error.rs  git.rs  godo.rs  lib.rs  metadata.rs  output.rs  session.rs  store.rs  types.rs
crates/liboutput/: Cargo.toml
crates/liboutput/examples/: demo.rs
crates/liboutput/src/: lib.rs
crates/output-test/: Cargo.toml
crates/output-test/src/: main.rs
plans/: cleanups.md  diff.md  improve.md  io.md
src/: git.rs  godo.rs  main.rs  output.rs
tests/: diff_test.rs  e2e_test.rs  integration_test.rs
tests/common/: mod.rs
