[package]
name = "libgodo"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clonetree = { workspace = true }
reflink-copy = { workspace = true }
thiserror = { workspace = true }
fs4 = { workspace = true }
sysinfo = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"

[dev-dependencies]
tempfile = { workspace = true }
