[package]
name = "liboutput"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Terminal output abstractions for colored messages and interactive prompts"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
crossterm = { workspace = true }
termcolor = { workspace = true }
thiserror = { workspace = true }
