[package]
name = "liboutput"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Terminal output abstractions for colored messages and interactive prompts"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
crossterm = { workspace = true }
indicatif = { workspace = true }
inquire = "0.9.1"
termcolor = { workspace = true }
textwrap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
